--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: HR Wiki
   <p>面向程序员群体的劳动权益小知识库</p>
   <p>我读书少，你们别骗我...</p>
   <ul class="posts">
-    <li> <a href="/social_security.html"> 社保公积金 </a></li>
-    <li> <a href="/labour_law.html"> 劳动法 </a></li>
+    <li> <a href="social_security.html"> 社保公积金 </a></li>
+    <li> <a href="labour_law.html"> 劳动法 </a></li>
   </ul>
 </div>
